# ComfyUI_Eclipse

./: CHANGELOG.md  README.md  __init__.py  docker_config.json  eclipse_config.json  eclipse_config.json.example  pyproject.toml  requirements.txt  reset_prompts.bat  reset_prompts.sh  setup_cache_clearing.sh
.defaults/: config.json.example  docker_config.json.example
Readme/: Checkpoint_Loaders.md  Docker_Installation_Guide.md  Docker_Installation_Guide_Linux.md  GetFirst_GetAllActive.md  LLM_Security_Warning.md  Load_Image_From_Folder.md  Model_Repos_Reference_CP.md  Model_Repos_Reference_Links.md  Prompt_Styler.md  README.md  ReadPromptFiles_Usage.md  Replace_String_v3.md  Save_Images.md  Save_Prompt.md  Set_Get_Bridge.md  Smart_Detection_Guide.md  Smart_Folder_v2.md  Smart_LM_Loader_Guide.md  Smart_Language_Model_Loader_v2_Guide.md  Smart_Loaders.md  Smart_Prompt.md  Smart_Sampler_Settings_v2.md  Utility_Nodes.md  Wildcard_Processor.md
core/: __init__.py  civitai_client.py  common.py  docker_error_handler.py  file_cache.py  florence2_wrapper.py  gguf_wrapper.py  image_helpers.py  image_metadata.py  keys.py  loader_templates.py  logger.py  migration.py  mistral_weight_converter.py  model_integrity.py  model_loader_common.py  nunchaku_wrapper.py  regex_helper.py  regex_patterns.py  server_endpoints.py  smart_text_processor.py  smartlm_base_v2.py  smartlm_device.py  smartlm_files.py  smartlm_gguf.py  smartlm_llamacpp_docker.py  smartlm_ollama_docker.py  smartlm_sglang_docker.py  smartlm_templates.py  smartlm_transformers.py  smartlm_types.py  smartlm_vllm_docker.py  smartlm_vllm_native.py  styles.py  wan_vae.py  wildcard_engine.py
docs/: LLM_SECURITY_WARNING.md
js/: eclipse-any-dualswitch-purge.js  eclipse-any-dualswitch.js  eclipse-any-passer-purge.js  eclipse-any-passer.js  eclipse-any-type-handler.js  eclipse-canvas-utils.js  eclipse-cleanup-nodes.js  eclipse-clip-loader.js  eclipse-clip-text-encode-advanced.js  eclipse-combo-chip.js  eclipse-conversion-nodes.js  eclipse-detection-to-bboxes.js  eclipse-dom-preview-nodes.js  eclipse-dom-preview.js  eclipse-dom-text.js  eclipse-dynamic-inputs.js  eclipse-folder-path.js  eclipse-getallactive.js  eclipse-getfirst.js  eclipse-groups-panel.js  eclipse-ifelse.js  eclipse-image-comparer.js  eclipse-image-rescale.js  eclipse-image-resize.js  eclipse-image-resolution.js  eclipse-image-selector.js  eclipse-image-with-fx.js  eclipse-load-audio.js  eclipse-load-batch-from-folder-advanced.js  eclipse-load-batch-from-folder.js  eclipse-load-image-folder-pipe.js  eclipse-load-image-folder.js  eclipse-load-image.js  eclipse-loader-shared.js  eclipse-lora-stack.js  eclipse-mode-nodes.js  eclipse-model-loader-pipe.js  eclipse-model-loader.js  eclipse-node-size-fix.js  eclipse-pipe-any-type.js  (+45 more)
py/: RvAudio_LoadAudio.py  RvAudio_LoopAlignSilence.py  RvAudio_LoopCalc.py  RvConversion_ConcatMulti.py  RvConversion_ConcatMulti_v2.py  RvConversion_ConvertPrimitive.py  RvConversion_ConvertToBatch.py  RvConversion_ConvertToList.py  RvConversion_DetectionToBboxes.py  RvConversion_ImageConvert.py  RvConversion_Join.py  RvConversion_Join_v2.py  RvConversion_LoraStackToString.py  RvFolder_AddFolder.py  (+204 more)
(+584 files in other folders)
