[project]
name = "ComfyUI_Eclipse"
description = "Comprehensive ComfyUI custom node suite featuring Smart Loaders (multi-format checkpoint support with Nunchaku/GGUF quantization), Smart Language Model Loader v2 (unified vision-language AI with QwenVL, Mistral, Florence-2 via Transformers/Docker/GGUF backends), Smart Prompt system with wildcards, sophisticated pipe ecosystem, universal type converters, image/video utilities, and workflow helpers."
version = "1.2.4"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "Pillow", "opencv-python", "pilgram", "safetensors", "torchvision", "psutil", "requests", "PyYAML", "aiohttp", "transformers", "huggingface_hub", "accelerate", "bitsandbytes", "openai"]

[project.urls]
Repository = "https://github.com/r-vage/ComfyUI_Eclipse"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "rvage"
DisplayName = "ComfyUI Eclipse"
Icon = "https://raw.githubusercontent.com/r-vage/ComfyUI_Eclipse/refs/heads/main/Readme/icon_eclipse.png"