[project]
name = "ComfyUI_Eclipse"
description = "Comprehensive ComfyUI custom node suite featuring Smart Loaders (multi-format checkpoint support with Nunchaku/GGUF quantization), Smart Prompt system with wildcards, sophisticated pipe ecosystem, universal type converters, image/video utilities, and workflow helpers. V3 API, Nodes 2.0 compatible."
version = "3.1.26"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "Pillow", "opencv-python", "pilgram", "safetensors", "torchvision", "psutil", "requests", "PyYAML", "aiohttp"]

[project.urls]
Repository = "https://github.com/r-vage/ComfyUI_Eclipse"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "rvage"
DisplayName = "ComfyUI Eclipse"
Icon = "https://raw.githubusercontent.com/r-vage/ComfyUI_Eclipse/refs/heads/main/Readme/icon_eclipse.png"